--- a/README
+++ b/README
@@ -34,13 +34,13 @@ tools including:
  - nonlinear oscillator
  - parser of mathematical expression
 
-CURE is required.
+ZEDA is required.
 
 -----------------------------------------------------------------
 [Installation / Uninstallation]
 
 <install>
-0. Install CURE in advance.
+0. Install ZEDA in advance.
 
 1. Unpack the distributed archive where you want.
 
