--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+2015. 5. 4. Reflected modification of zOptionRead. [app]
+2015. 5. 3. Debugged _zNURBSSeg. [zm_nurbs]
 2015. 5. 1. Modified zNURBSCreate to read a sequence of control points from head to tail. [zm_nurbs]
 2015. 4.27. Modified zClusterDataFWrite. [zm_mca_cluster]
 2015. 4.24. Added zNURBSVecNN. [zm_nurbs]
