--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,9 @@
-2015. 5. 6. Added zNURBSCPNum. [zm_nurbs]
+2015. 7.10. Debugged zQPSolveASM thanks to Naoki Wakisaka. [zm_opt_qp]
+2015. 7. 1. Modified zNURBSVecNN. [zm_nurbs]
+2015. 5. 6. Modified _zNURBSBasisDiff and zNURBSVecDiff. [zm_nurbs]
+2015. 5. 6. Renamed zNURBSCPArrayFWrite to zNURBSCPFWrite and added zNURBSKnotFWrite. [zm_nurbs]
+2015. 5. 6. Debugged zNURBSCreate. [zm_nurbs]
+2015. 5. 6. Added zNURBSKnotNum and zNURBSCPNum. [zm_nurbs]
 2015. 5. 6. Removed seq member from zNURBS. [zm_nurbs]
 2015. 5. 4. Reflected modification of zOptionRead. [app]
 2015. 5. 3. Debugged _zNURBSSeg. [zm_nurbs]
