--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,6 @@
+2018. 7. 9. Updated zQPSolveASM. [zm_opt_qp] (by Naoki Wakisaka)
+2018. 7. 9. Debugged zLPSolvePDIP_PC. [zm_opt_lp_pdip] (by Naoki Wakisaka)
+2018. 7. 9. Debugged _zLPTableauReset and _zLPTableauSimplex. [zm_opt_lp_simplex] (by Naoki Wakisaka)
 2015. 7.10. Debugged zQPSolveASM thanks to Naoki Wakisaka. [zm_opt_qp]
 2015. 7. 1. Modified zNURBSVecNN. [zm_nurbs]
 2015. 5. 6. Modified _zNURBSBasisDiff and zNURBSVecDiff. [zm_nurbs]
